
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAY 04c
  * in bin/Keller-Kloker.wrp
    - increased the mesh density in heat addition zone and in transition zone
  * in cycle/share/cycle_share.c
    - in read_cycle() added a fatal_error if runtime module is not found 
  * in src/bdry.c
    - in read_bdry_actions(), now only Unlinks a node if it is a boundary node (when using the
      action Unlink)


2019 MAY 04b
  * in tools/replace.sh
    - added the escaping of '(' and ')' for the mode perl

  
2019 MAY 04a
  * in *.c files
    - within the license inserted word wraps at the 90th column for better readability


2019 MAY 03c
  * in tools/replace.sh
    - added the mode pureperl which permits the search and replace of end of line characters


2019 MAY 03b
  * in LICENSES/CFDWARP-Proprietary
    - minor change 


2019 MAY 03a
  * in LICENSES/CFDWARP-Proprietary
    - applied word wrapping at the 90th column for better readability
  * in various proprietary C files
    - applied word wrapping in CFDWARP-Proprietary license


2019 MAY 02c
  * in README
    - removed statement about LICENSE
  * in lib/latex/
    - updated the warplogo.xvf and all export files


2019 MAY 02b
  * replaced in all *.wrp files
    - 'A CFD Code for Plasma' -> ' CFD Code for Plasma' 
  * in src/control.c
    - in write_modules(), replaced 'A CFD Code for Plasma' for ' CFD Code for Plasma' 
  * in README
    - replaced 'A CFD Code for Plasma' for ' CFD Code for Plasma'
  * in cycle/resconv/_MUSCL/resconv.c
    - in write_disc_resconv_template(), changed the default INTERPOL from AOWENO7 to TVD2_VANLEER


2019 MAY 02a
  * created directory LICENSES
  * deleted LICENSE
  * in LICENSES added 
    - CFDWARP-Proprietary
    - BSD-2-Clause
  * in all .c and .h files