@@ -54,5 +54,5 @@ Thoguluva Rajendran, Prasanna
   - tools/average.c
  
 Weerakoon, Minindu
-  - Fixes to memory leaks problems (see CHANGELOG 19feb23a and 19feb27a and 19feb28b) 
+  - Fixes to memory leaks problems (see CHANGELOG 19feb23a and 19feb27a and 19feb28b and 19may08a) 
 
